--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "symfony/http-kernel": "~4.3",
         "symfony/lock": "~4.3",
         "symfony/process": "~4.3",
+        "symfony/routing": "~4.3",
 
         "filp/whoops": "~2.5",
         "twig/twig": "~2.12"
