--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,11 @@
 
         "filp/whoops": "~2.14",
         "twig/twig": "~3.0",
-        "assetic/framework": "~2.0"
+
+        "assetic/framework": "~2.0",
+        "natxet/cssmin": "~3.0",
+        "leafo/lessphp": "~0.5",
+        "tedivm/jshrink": "~1.4"
     },
     "autoload": {
         "psr-4": {
