--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 
         "assetic/framework": "~2.0",
         "natxet/cssmin": "~3.0",
-        "leafo/lessphp": "~0.5",
+        "marfrelen/lessphp": "~0.5",
         "tedivm/jshrink": "~1.4"
     },
     "autoload": {
